--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,8 +12,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Contact</h1>
-              <p class="mb-0">If you have any questions, concerns, or would like to get in touch with us, feel free to reach out. We are always here to assist you with any inquiries or feedback you may have. Our team is committed to providing the best possible service and ensuring a seamless experience. We value your input and look forward to hearing from you.</p>
+              <h1>Aloqa</h1>
+              <p class="mb-0">Agar sizda his-tuyg‘ularni aniqlash tizimi bo‘yicha savollar, takliflar yoki hamkorlik istagi bo‘lsa, biz bilan bog‘lanishingiz mumkin. Loyihamiz yuz ifodalari orqali insonning ruhiy holatini avtomatik aniqlashga qaratilgan bo‘lib, uni yanada takomillashtirish uchun fikr-mulohazalaringiz muhim.</p>
             </div>
           </div>
         </div>
