--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -14,8 +14,8 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Gallery</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
-              <a href="contact.html" class="cta-btn">Available for Hire<br></a>
+              <p class="mb-0">Ushbu bo‘limda tizim orqali aniqlangan yuz ifodalari aks etgan rasmlar jamlangan. Har bir surat real vaqt rejimida aniqlangan his-tuyg‘ular — masalan, xursandlik, hafalik, g‘azab yoki hayrat — bilan bog‘liq. Galereya orqali siz tizim qanday ishlashini, yuz ifodalarini qanday tahlil qilganini va saqlaganini vizual ko‘rinishda ko‘rishingiz mumkin. Bu bo‘lim loyihaning samaradorligini ko‘rsatadigan amaliy misollardir.</p>
+              <a href="{% url "contact" %}" class="cta-btn">Aloqa uchun<br></a>
             </div>
           </div>
         </div>
