--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -34,6 +34,8 @@
           </li>
           <li><a href="{% url 'services' %}">Xizmatlar</a></li>
           <li><a href="{% url 'contact' %}">Aloqa</a></li>
+          <li><a href="{% url 'detect' %}">Camera</a></li>
+
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
